--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,15 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.github.clans:fab:1.6.4'
     compile 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.0'
+    compile 'com.brouding:android-simple-dialog:0.3.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
 
 
