--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,10 @@ dependencies {
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'com.github.wooplr:Spotlight:1.2.3'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
+    compile 'com.github.tbouron.shakedetector:library:1.0.0@aar'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
