--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,16 @@ android {
     }
 }
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
+        mavenCentral()
     }
 }
 
@@ -50,9 +57,11 @@ dependencies {
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'com.github.wooplr:Spotlight:1.2.3'
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
-    compile 'com.github.tbouron.shakedetector:library:1.0.0@aar'
+    compile 'com.github.safetysystemtechnology:android-shake-detector:v1.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
