--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,13 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.4.+'
     compile 'com.github.safetysystemtechnology:android-shake-detector:v1.2'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    compile 'com.google.zxing:core:3.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
 
 
